--- a/PetMate/index.html
+++ b/PetMate/index.html
@@ -2,6 +2,8 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
+    <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.ico" media="(prefers-color-scheme: light)"> -->
+    <!-- <link rel="icon" type="image/png" href="/images/android-chrome-512x512.png" media="(prefers-color-scheme: dark)"> -->
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PetMate</title>
